:recycle: refactor: adaptando metodos de autenticacao para outras camadas